--- a/html/css/style.css
+++ b/html/css/style.css
@@ -3,10 +3,28 @@ html, body {
     width: 100%;
 }
 
+/*#########################
+#######PAGE ENTIERE########
+#########################*/
+.PageEntiere {
+    background-color: white;
+}
+
+/*#########################
+###########MAP#############
+#########################*/
 #map {
     min-height: 200px;
     min-width: 200px;
 }
+.fill2{
+    z-index: 5;
+    background-color: white;
+}
+
+/*#########################
+## MES STYLES RESPONSIVES #
+#########################*/
 @media screen and (max-width: 767px) {
 .h-md-85 {
     height: 90%;
@@ -27,9 +45,278 @@ html, body {
     margin-top: 90%;
 }
 
+
+
 #copyright {
     text-align: center;
     color: #D64E26;
     font-size: 10px;
     margin-top: 15%;
+}
+
+
+/*#########################
+###########RGPD############
+#########################*/
+
+.textRGPD {
+   text-align: justify 
+}
+
+.boutonRGPD {
+    text-align: center;
+}
+
+.NONRGPD {
+    font-style: 50%;
+}
+#RGPD_warning p {
+    z-index: 99;
+}
+@keyframes RGPD_animation {
+  0%   {bottom: -100px;}
+  100% {bottom: 10px;}
+}
+
+#RGPD_warning {
+    display: none;
+    position: absolute;
+    bottom: 1px;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, 0);
+    z-index: 99;
+    background-color: #FFF8C2;
+    animation-name: RGPD_animation;
+    animation-duration: 2s;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+}
+
+
+
+
+#closevideo {
+  position:absolute;
+  right:-20px;
+  top:0;
+  z-index:999;
+  font-size:2rem;
+  font-weight: normal;
+  color:#fff;
+  opacity:1;
+}
+
+
+/*#########################
+#######RUBAN DROITE########
+#########################*/
+.boutonclickable {
+    cursor:pointer;
+}
+.fillright{
+    background-color:#FBE5D6FF;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+
+
+/*##################################################
+############ZONE DU MENU ET LOGO####################
+##################################################*/
+.logomenu:hover{
+    transform: scale(1.1);
+}
+
+/*##################################################
+############ZONE DE LA RECHERCHE####################
+##################################################*/
+
+.titrerecherche {
+    height:4%;
+    width: 100%;
+    text-decoration:underline;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 0%;
+    margin-bottom: 0%;
+}
+
+#searchinput::placeholder {
+  font-size: 1vw; 
+}
+.ui-autocomplete {
+    max-height:40%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    position:absolute;
+} 
+.nom_de_l_ingredient {
+    text-transform: uppercase;
+    font-weight: 400;
+    color: black;
+}
+.synonymes {
+    font-size: 80%;
+    color: grey;
+}
+.numero_cas {
+    font-style: italic;
+    font-size: 70%;
+    color: black;
+}
+.ui-state-highlight { 
+    background: #FAE8BE !important;
+}
+.ui-state-active { 
+    background: #FFF7E4 !important;
+    border-color: #FAE8BE !important;
+}
+
+
+/*#########################
+########MODAL MENU#########
+#########################*/
+.papernote {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding:10px;
+    margin-top:10px;
+    margin-bottom:10px; 
+    font-style: x-small;            
+}
+.icone {
+    color:grey;
+}
+.license {
+    font-size: small;
+    text-align: center;
+}
+
+/*##################################################
+############ZONE VIDE AVANT BTNS####################
+##################################################*/
+
+
+/*###############################################
+############ZONE DES BOUTONS ####################
+###############################################*/
+.boutons {
+    height: 10%; 
+}
+/*CONTACT*/
+.mail2 {
+    padding-top: 8%;
+}
+/*CREDITS*/
+.profession {
+    font-size: 12px;
+}
+/*###############################################
+################ COPYRIGHT ######################
+###############################################*/
+.copyright {
+    text-align: center;
+    color: #D64E26;
+    font-size: 0.65vw;
+    padding-top: 2%;
+}
+/*#########################
+######CARTE IDENTITE#######
+#########################*/
+
+/*#########################
+###########IFRA############
+#########################*/
+th {
+    border: 1px solid black;
+    text-align: center;
+    height: 50%;
+    font-style: large;
+}
+td {
+    border: 1px solid black;
+    text-align: center;  
+}
+.caption {
+    color : grey;
+    text-align: center;
+    font-style: italic;
+}
+.logoifra {
+    width: 90%;
+    height: 90%;
+    text-align: center;
+}
+.blocktable {
+    padding-bottom: 1%;
+}
+.table1 {
+    display: none;
+}
+.table2 {
+    display: none;
+}
+.table3 {
+    display: none;
+}
+.logoifra {
+    display: none;
+}
+.amendment {
+    display: none;
+}
+.commentaires {
+    display: none;
+}
+
+/*############################
+######MENTIONS LEGALES########
+############################*/
+
+.titre1 {
+    font-weight: bold;
+    list-style-type: upper-roman;
+}
+.titre2 {
+    list-style-type: lower-alpha;
+
+}
+.paragraphetete {
+    margin-top: 1%; 
+    margin-left: -5%;
+}
+.paragraphetete2 {
+    margin-top: 1%; 
+    margin-left: -10%;
+}
+.paragraphe {
+    margin-left: -5%;
+}
+.paragraphe2 {
+    margin-left: -10%;
+}
+.titreparagraphe {
+    margin-left: -5%;
+    text-decoration: underline;
+    font-weight: bold;
+
+}
+.miniliste{
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+.fond-blanc {
+    background-color: white;
+}
+
+/*#########################
+###########MODAL###########
+#########################*/
+.modal-title1 {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration:underline;
 }
