one menu for sm, an other menu for md

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -160,6 +160,10 @@ html, body {
 ############ZONE DE LA RECHERCHE####################
 ##################################################*/
 
+#searchinput-sm {
+  width: 300px;
+}
+
 .titrerecherche {
     height:4%;
     width: 100%;
