--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,8 +1,3 @@
-html, body {
-    height:100%;
-    width: 100%;
-}
-
 #menu-block {
   z-index: 2;
 }
@@ -14,8 +9,16 @@ html, body {
 /*#########################
 #######PAGE ENTIERE########
 #########################*/
+@media screen and (max-width: 767px) {
 .PageEntiere {
     background-color: white;
+    padding-top: 60px;
+}
+}
+@media screen and (min-width: 768px) {
+.PageEntiere {
+    background-color: white;
+}
 }
 
 /*#########################
@@ -45,7 +48,10 @@ html, body {
 .h-80pc-md-100pc {
     height: calc(100vh - 45px);
 }
-
+.h-100-with-padding-60px-before-md {
+   height: 100%;
+   padding-top: 60px;
+}
 }
 @media screen and (min-width: 768px) {
 .h-md-85 {
@@ -56,6 +62,9 @@ html, body {
 }
 .h-80pc-md-100pc {
     height: 100%;
+}
+.h-100-with-padding-60px-before-md {
+   height: 100%;
 }
 }
 
@@ -156,12 +165,19 @@ html, body {
 }
 }
 
+#menu-block-sm {
+   height: 60px;
+   float: top;
+}
+
+
 /*##################################################
 ############ZONE DE LA RECHERCHE####################
 ##################################################*/
 
 #searchinput-sm {
   width: 300px;
+  border: none;
 }
 
 .titrerecherche {
