--- a/html/css/style.css
+++ b/html/css/style.css
@@ -35,6 +35,10 @@
   max-height: calc(115vh - 320px);
 }
 
+.text-size-14px {
+  font-size: 14px;
+}
+
 /*#########################
 #######PAGE ENTIERE########
 #########################*/
