--- a/html/css/style.css
+++ b/html/css/style.css
@@ -39,6 +39,10 @@
   font-size: 14px;
 }
 
+.text-size-1-5vw {
+ font-size: 1.2vw; 
+}
+
 /*#########################
 #######PAGE ENTIERE########
 #########################*/
