upgraded the 'réglementation' pane for the 'botanique' modal

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -325,6 +325,10 @@
 /*#########################
 ###########IFRA############
 #########################*/
+table {
+  border: 1px solid black;
+  width: 100%;
+}
 th {
     border: 1px solid black;
     text-align: center;
