border around 'ils nous soutiennent'

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -259,6 +259,9 @@
   font-size: 18px
 }
 
+.with-my-border {
+  border: 2px solid #D64E26;
+}
 /*##################################################
 ############ZONE DE LA RECHERCHE####################
 ##################################################*/
