--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 #menu-block {
   z-index: 2;
   min-height: 500px;
