my first buttons to switch to english or french version

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -904,3 +904,14 @@ h1 {
     margin-bottom: 5%;
 }
 }
+
+
+
+/* LANGUAGES */
+
+*:lang(fr) {
+	display: none;
+}
+*:lang(en) {
+	display: inherit;
+}
