--- a/html/css/style.css
+++ b/html/css/style.css
@@ -293,6 +293,7 @@ html, body {
     text-transform: uppercase;
     font-weight: 400;
     color: black;
+    font-size: 70%;
 }
 .synonymes {
     font-size: 65%;
