changing footer style

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -879,6 +879,9 @@ h1 {
     font-size:small;
     font-style: italic;
 }
+.textitemfooter{
+    font-size:small;
+}
 .imgmp {
     max-width: 180px;
     max-height: 180px;
