--- a/html/css/style.css
+++ b/html/css/style.css
@@ -555,6 +555,9 @@ h1 {
     font-size:small;
     font-style: italic;
 }
+.textitem-footer{
+    font-size:12px;
+}
 .imgmp {
     max-width: 180px;
     max-height: 180px;
@@ -654,6 +657,9 @@ h1 {
     padding: 5px;
     font-size:small;
     font-style: italic;
+}
+.textitem-footer{
+    font-size:12px;
 }
 .imgmp {
     max-width: 180px;
@@ -765,6 +771,9 @@ h1 {
     padding: 5px;
     font-size:small;
     font-style: italic;
+}
+.textitem-footer{
+    font-size:12px;
 }
 .imgmp {
     max-width: 180px;
@@ -879,8 +888,8 @@ h1 {
     font-size:small;
     font-style: italic;
 }
-.textitemfooter{
-    font-size:small;
+.textitem-footer{
+    font-size:12px;
 }
 .imgmp {
     max-width: 180px;
