--- a/html/css/style.css
+++ b/html/css/style.css
@@ -556,7 +556,7 @@ h1 {
     font-style: italic;
 }
 .textitem-footer{
-    font-size:14px;
+    font-size:small;
 }
 .imgmp {
     max-width: 180px;
@@ -659,7 +659,7 @@ h1 {
     font-style: italic;
 }
 .textitem-footer{
-    font-size:14px;
+    font-size:small;
 }
 .imgmp {
     max-width: 180px;
@@ -773,7 +773,7 @@ h1 {
     font-style: italic;
 }
 .textitem-footer{
-    font-size:12px;
+    font-size:small;
 }
 .imgmp {
     max-width: 180px;
@@ -889,7 +889,7 @@ h1 {
     font-style: italic;
 }
 .textitem-footer{
-    font-size:8px;
+    font-size:small;
 }
 .imgmp {
     max-width: 180px;
@@ -914,6 +914,9 @@ h1 {
     max-height: 180px;
     padding-left: 35%;
     margin-bottom: 5%;
+}
+.textitem-footer{
+    font-size:small;
 }
 }
 
