--- a/html/css/style.css
+++ b/html/css/style.css
@@ -297,6 +297,7 @@ html, body {
 .nom_de_l_ingredient {
     text-transform: uppercase;
     font-weight: 400;
+    font-size: 80%;
     color: black;
 }
 .synonymes {
