--- a/html/css/style.css
+++ b/html/css/style.css
@@ -943,13 +943,16 @@ h1 {
     position: absolute;
     width: 250px;
     height: 50px;
-    top: 5px;
-    right: 5px;
+    top: 5%;
+    right: 5%;
     z-index: 999;
     font-size: small;
     color: #D64E26;
     text-align: justify; 
-    border: solid;
+    border: 0.5rem solid;
     border-color: #FBE5D6FF;
     border-radius: 10px;
+}
+p.#you_can_zoom {
+    margin-right: 5px;
 }
