--- a/html/css/style.css
+++ b/html/css/style.css
@@ -946,7 +946,7 @@ h1 {
     right: 3%;
     z-index: 999;
     font-size: small;
-    color: #F0BEB0;
+    color: #D64E26;
     text-align: justify; 
     border: 0.3rem solid;
     border-color: #F0BEB0;
