--- a/html/css/style.css
+++ b/html/css/style.css
@@ -941,6 +941,7 @@ h1 {
 #you_can_zoom {
     /*display: none;*/
     position: absolute;
+    width: 300px;
     top: 3%;
     right: 3%;
     z-index: 999;
