--- a/html/css/style.css
+++ b/html/css/style.css
@@ -75,6 +75,12 @@ html, body {
     color : grey;
 }
 
+tr:nth-child(odd) {
+ 
+  background-color: #121212;
+  color:#fff;
+ 
+}
 
 @media screen and (max-width: 767px) {
 .font-italic-before-md {
@@ -550,8 +556,9 @@ h1 {
     font-size:small;
 }
 .textitem {
-    padding: 15px;
+    padding: 5px;
     font-size:small;
+
 }
 .textitem2 {
     padding: 5px;
