--- a/html/css/style.css
+++ b/html/css/style.css
@@ -77,8 +77,8 @@ html, body {
 
 tr:nth-child(odd) {
  
-  background-color: #121212;
-  color:#fff;
+  background-color: #FBE5D6FF;
+  color:#121212;
  
 }
 
