--- a/html/css/style.css
+++ b/html/css/style.css
@@ -75,7 +75,7 @@ html, body {
     color : grey;
 }
 
-tr:nth-child(odd) {
+tr:nth-child(even) {
  
   background-color: #FBE5D6FF;
   color:#121212;
