--- a/html/css/style.css
+++ b/html/css/style.css
@@ -77,7 +77,8 @@ html, body {
 
 tr:nth-child(even) {
  
-  background-color: #FFF5EF;
+  background-color: #FBE5D6FF;
+  opacity: 0.6;
   color:#121212;
  
 }
