--- a/html/css/style.css
+++ b/html/css/style.css
@@ -380,7 +380,7 @@ th, .table th {
     text-align: center;
     height: 50%;
     font-style: large;
-    background-color: blue;
+    background-color: #FBE5D6FF;
 }
 td, .table td {
     border: 1px solid black;
@@ -388,7 +388,7 @@ td, .table td {
     vertical-align: middle;
 }
 tr:nth-child(even) {
-  background-color: #FBE5D6FF;
+  background-color: #D8D8D8;
   color:#121212; 
 }
 .caption {
