--- a/html/css/style.css
+++ b/html/css/style.css
@@ -783,7 +783,7 @@ h1 {
 h1 {
    width: 100%;
    font-style: bold;
-   font-size: 1.1vw;
+   font-size: 1.3vw;
    margin-top: 0%;
    margin-bottom: 0%;
    display: none;
@@ -819,12 +819,12 @@ h1 {
     display: inline;
 }
 .modalheader-type {
-    font-style: 16px;
+    font-style: 18px;
     text-transform: uppercase;
     text-align: center;
 }
 .modalheader-type2 {
-    font-style: 16px;
+    font-style: 18px;
     text-transform: uppercase;
     text-align: center;
 }
@@ -837,7 +837,7 @@ h1 {
     height: 10%;
     width: 100%;
     text-align: center;
-    font-size: 13px;
+    font-size: 15px;
     font-style: italic;
 }
 .panelcontent {
@@ -852,7 +852,7 @@ h1 {
     color: #C6BABA;
 }
 .item {
-    font-size: 0.8vw;
+    font-size: 14px;
 }
 .textitem {
     padding: 5px;
@@ -882,6 +882,14 @@ h1 {
 }
 
 @media screen and (max-width: 768px) {
+h1 {
+   width: 100%;
+   font-style: bold;
+   font-size: 1.1vw;
+   margin-top: 0%;
+   margin-bottom: 0%;
+   display: none;
+}
 .onglets {
     font-size: 12px;
 }
