--- a/html/css/style.css
+++ b/html/css/style.css
@@ -35,6 +35,12 @@ html, body {
 .max-height-20px {
   max-height: 20px;
 }
+.max-height-15px {
+  max-height: 15px;
+}
+.max-height-10px {
+  max-height: 10px;
+}
 
 .text-underline {
   text-decoration: underline;
