--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -158,13 +158,13 @@ html, body {
 .content h3{
 	font-weight:900;
 	color:#D64E26;
-	font-size:18px;
+	font-size:1.2em;
 	padding-top: 2.5%;
 }
 
 .content p{
 	padding-top:0;
-	font-size:14px;
+	font-size:1em;
 	line-height:1.7em;
 }
 @media  (max-width: 1000px){
