--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -193,7 +193,15 @@ html, body {
 	font-size:1.3em;
 }
 .content p {
-	font-size:0.7em;
+	font-size:0.9em;
+}
+.timeline:before{
+	content:'';
+	position:absolute;
+	left:20%;
+	width:2px;
+	height:100%;
+	background-color:#D64E26;
 }
 .timeline li:nth-child(even), .timeline li:nth-child(odd) {
 	width:100%;
