--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -119,8 +119,9 @@ html, body {
 .timeline ul li{
 	line-height:normal;
 	position:relative;
-	width:50%;
+	width:90%;
 	padding:5px 35px;
+	background color: Red;
 }
 
 /*for every odd numbered bullet point, align to the left*/
@@ -134,7 +135,6 @@ html, body {
 .timeline ul li:nth-child(even){
 	text-align:left;
 	float:right;
-	list-style-type: none;
 	clear:both; /*each step doesn't overlap the other vertically */
 }
 
