--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -176,8 +176,10 @@ html, body {
 
 .content p{
 	padding-top:0;
+	width: 100%;
 	font-size:0.9em;
 	line-height:1.7em;
+	back-groundcolor: grey;
 }
 
 
