--- a/html/css/stylenouveautes.css
+++ b/html/css/stylenouveautes.css
@@ -110,7 +110,7 @@ html, body {
 	content:'';
 	position:absolute;
 	left:52.5%;
-	width:2%;
+	width:1%;
 	height:90%;
 	background-color:#D64E26;
 }
@@ -121,7 +121,7 @@ html, body {
 	position:relative;
 	width:50%;
 	padding:5px 35px;
-	background-color: grey;
+	border-color: grey;
 }
 
 /*for every odd numbered bullet point, align to the left*/
